gdb/ 	PR symtab/13277: Resolving opaque structures in ICC generated binaries. 	* dwarf2read.c (struct dwarf2_cu) <producer_is_icc>: New field. 	(producer_is_gxx_lt_4_6): Move the checking and caching to... 	(check_producer): ... this new function, which also checks for ICC 	and caches the result. 	(producer_is_icc): New function. 	(read_structure_type): Don't set TYPE_STUB_SUPPORTED if the 	producer was ICC.

gdb/testsuite/
	PR symtab/13277: Resolving opaque structures in ICC generated binaries.
	* gdb.dwarf2/dw2-icc-opaque.S: New file.
	* gdb.dwarf2/dw2-icc-opaque.exp: New file.